# cosplay_photo_library_stat

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml.example  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
app/: config.py  dashboard.py  db.py  i18n.py  main.py  models.py  scanner.py
app/assets/fonts/: README.md
app/default_data/ui/: en.json  ja.json  zh-CN.json
app/static/: app.js  styles.css
app/templates/: index.html
deploy/compose/: docker-compose.example.yml  docker-compose.unraid.yml
scripts/: export_translate_entities.py  fill_translate_csv_zhcn.py  llm_cosplay_translator.py
translate/zhcn/: characters-zh-CN.csv  cosers-zh-CN.csv
