[project]
name = "cosplay-photo-library-stat"
version = "0.1.0"
description = "Cosplay photo library statistics dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ddgs==9.11.4",
  "fastapi==0.115.0",
  "jinja2==3.1.4",
  "pillow==10.4.0",
  "pymysql==1.1.1",
  "python-multipart==0.0.12",
  "sqlalchemy==2.0.36",
  "uvicorn[standard]==0.30.6",
]

[tool.uv]
package = false
